daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app: k8s-debug
  name: k8s-debug
  namespace: k8s-debug
spec:
  selector:
    matchLabels:
      app: k8s-debug
  template:
    metadata:
      labels:
        app: k8s-debug
    spec:
      containers:
      - image: quay.io/filiphavlicek/k8s-debug:nonroot
        imagePullPolicy: Always
        name: k8s-debug
      tolerations:
      - key: CriticalAddonsOnly
        operator: Exists
      - effect: NoSchedule
        key: node.kubernetes.io/not-ready
        operator: Exists
