service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-debug
  name: k8s-debug
  namespace: k8s-debug
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: k8s-debug
  type: ClusterIP
